v24-25.1/k8s/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: default
  labels:
    app: app
spec:
  containers:
    - name: app
      image: localhost/app:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 81
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
